Sizing fix on smaller devices

--- a/src/Components/Results/ResultsStyles.css
+++ b/src/Components/Results/ResultsStyles.css
@@ -35,7 +35,7 @@ h4{
 }
 
 .secondRow {
-    padding-top: 5vh !important;
+    padding-top: 2vh !important;
     padding-left: 80px !important;
     padding-right: 80px !important;
 }
